--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jshint-stylish": "latest"
   },
   "dependencies": {
+    "bootstrap-datepicker": "^1.6.4",
     "easy-autocomplete": "^1.3.5",
+    "jquery-validation": "^1.15.1",
     "mdi": "^1.7.22"
   }
 }
