--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "grunt-contrib-less": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
+    "grunt-processhtml": "^0.4.1",
     "grunt-responsive-images": "^0.1.9",
+    "grunt-ucss": "^0.1.4",
+    "grunt-uncss": "^0.6.1",
     "jshint-stylish": "latest"
   },
   "dependencies": {
